test/files/neg/t4541.check
t4541.scala:11: error: scala.reflect.internal.Types$TypeError: variable data in class Sparse cannot be accessed in Sparse[Int]
 Access to protected method data not permitted because
 prefix type Sparse[Int] does not conform to
 class Sparse$mcI$sp where the access take place
    that.data
         ^
one error found